# hawk

./: .clang-format  .gitignore  99-pixhawk.rules  README.md  extras.txt  hitl.params  plot_juggler.xml  svo.csv
analysis/: .gitignore  README.md
analysis/EKF/: README.md  working.params
analysis/VIO/: README.md
analysis/run1/: README.md  svo.csv  svo.log2
analysis/run2/: svo.csv  svo.log2  svo.log3  svo.log4
calibration/: MPU_imu_param.yaml  README.md  april_tag.yaml  imu.yaml  imu_specification.yaml
calibration/camera/: README.md  imu_matlab.yaml  imu_matlab_X10.yaml  imu_matlab_X100.yaml
calibration/camera/stereo1/: camchain-stereo.yaml  results-cam-stereo.txt
calibration/camera/take1/: camchain-homekvroshawk_2020-03-12-16-38-26.yaml
calibration/camera/take2/: camchain-homekvroshawk2020-03-14-A0_take3.yaml  results-cam-homekvroshawk2020-03-14-A0_take3.txt
calibration/camera/take7/: results-cam-homekv_2020-03-19-16-35-18.txt
calibration/camera/take8/: results-cam-homekvroshawkbags_2018-01-28-00-08-57.txt
calibration/camera/take9/: camchain-..calibrate.yaml  results-cam-..calibrate.txt
calibration/camera/vio/: camchain-homekvroshawkcalibrationcameraviocal.yaml  results-cam-homekvroshawkcalibrationcameraviocal.txt
calibration/imu/: README.md
calibration/imu/01-diverging/: camchain-imucam-homekvrosbags_2018-01-28-21-40-42.yaml  results-imucam-homekvrosbags_2018-01-28-21-40-42.txt
calibration/imu/02-outside-board/: camchain-imucam-homekvroshawkbagsdate_2020_03_21take2.yaml  results-imucam-homekvroshawkbagsdate_2020_03_21take2.txt
calibration/imu/03-inside-new-board_1/: camchain-imucam-homekvimucalibration03-inside-new-board_2020-03-21-22-25-56.yaml  results-imucam-homekvimucalibration03-inside-new-board_2020-03-21-22-25-56.txt
calibration/imu/04-inside-new-board_2/: camchain-imucam-_2020-03-21-22-58-14.yaml  results-imucam-_2020-03-21-22-58-14.txt
calibration/imu/05-final/: camchain-imucam-_2020-03-22-01-14-49.yaml  results-imucam-_2020-03-22-01-14-49.txt
calibration/imu/06-final-zero_time_offset_1/: camchain-imucam-take1.yaml  imu-take1.yaml  results-imucam-take1.txt
calibration/imu/07-final-zero_time_offset_2/: camchain-imucam-take2.yaml  results-imucam-take2.txt
calibration/imu/static/: README  (+2 more)
calibration/run2/: camchain-homekvroshawk2020-03-14-A0_take3.yaml
calibration/take1/: results-cam-homekvroshawk_2020-03-12-16-38-26.txt
calibration/take3/: results-cam-homekvroshawk2020-03-14-A0_take3.txt
calibration/take4/: camchain-homekvroshawkcalibrationtake42020-03-14-A0_take4.yaml  results-cam-homekvroshawkcalibrationtake42020-03-14-A0_take4.txt
calibration/take5/: april_tag_A0.yaml
calibration/take6/: camchain-homekv_2020-03-18-19-38-33.yaml  results-cam-homekv_2020-03-18-19-38-33.txt
data/: README.md  first_successful_flight_test_23-01-2020.params
docs/: README.md  camera.md  imu.md  resources.md  trajectory.md
docs/testing/: HITL.params  README.md
imgs/: README.md
rviz/: README.md  template.rviz
scripts/: benchmark.sh  deps.sh  generate_tf2_frames.sh  hawk.sh  launch_offboard_sitl.sh  live.sh  load_px4_env.sh  test_offboard_basic_00.sh  test_offboard_basic_01.sh  test_offboard_basic_02.sh  test_offboard_basic_03.sh  test_offboard_basic_04.sh  test_offboard_field_testing.sh  test_offboard_trajectory.sh  test_offboard_vio_00.sh  test_vio_any_bag.sh
src/: .rosinstall
src/VIO/: README.md
src/VIO/rpg_svo/svo/: CMakeLists.txt
src/VIO/rpg_svo/svo/include/svo/: bundle_adjustment.h  config.h  depth_filter.h  feature.h  feature_detection.h  frame.h  frame_handler_base.h  frame_handler_mono.h  global.h  imu.h  imu_data.h  inertial_initialization.h  initialization.h  map.h  matcher.h  point.h  ring_buffer_imu.h  sparse_img_align.h  stereo.h  visual_inertial_estimator.h
src/VIO/rpg_svo/svo/src/: bundle_adjustment.cpp  config.cpp  depth_filter.cpp  feature_detection.cpp  frame.cpp  frame_handler_base.cpp  frame_handler_mono.cpp  imu.cpp  inertial_initialization.cpp  initialization.cpp  map.cpp  matcher.cpp  point.cpp  pose_optimizer.cpp  reprojector.cpp  ring_buffer_imu.cpp  sparse_img_align.cpp  stereo.cpp  visual_inertial_estimator.cpp
src/VIO/rpg_svo/svo/test/: test_depth_filter.cpp  test_feature_detection.cpp  test_imu_container.cpp  test_utils.h
src/apriltag_py/: node.py  test_info.yaml
src/offboard/: CMakeLists.txt  README.md  package.xml
src/offboard/include/offboard/: global.h  offboard.h
src/offboard/launch/: offboard_basic_00.launch  offboard_basic_01.launch  offboard_basic_02.launch  offboard_basic_03.launch  offboard_basic_04.launch  offboard_field_testing1.launch  offboard_simple_target.launch  offboard_sitl.launch  offboard_vio_00.launch  tf.launch
src/offboard/paths/: circle_enu.yaml  height.yaml  lamniscate_enu.yaml  square2_enu.yaml  square_enu.yaml  takeoff_land.yaml  vio_test_00.yaml
src/offboard/src/: offboard.cpp  offboard_node.cpp  test_offboard_basic.cpp  tf_broadcaster.cpp
src/offboard/test/: test_offboard_basic.cpp  test_offboard_basic_00.cpp  test_offboard_basic_01.cpp  test_offboard_basic_02.cpp  test_offboard_basic_03.cpp  test_offboard_basic_04.cpp  test_offboard_field_testing.cpp  test_offboard_trajectory.cpp  test_offboard_vio_00.cpp
src/tracking/: CMakeLists.txt  README.md  get_points.py  object-tracker-single.py  package.xml  tracker.py
src/tracking/bbox/: CMakeLists.txt
src/tracking/bbox/cmake/: bboxConfig.cmake
src/tracking/bbox/include/bbox/: bbox.h
src/tracking/bbox/src/: bbox.cpp
src/tracking/include/: tracker.h  utils.h
src/tracking/include/tracking/: bbox.h  tracker.h  utils.h
src/tracking/launch/: tracking.launch
src/tracking/perf/: perf.cpp
src/tracking/src/: bbox.cpp  bbox_test.cpp  dlib_tracking_example.cpp  image_pub_node.cpp  image_subs.cpp  tracker.cpp  tracker.h  tracking_bag.cpp  tracking_node.cpp  utils.cpp  utils.h
src/tracking/test/: CMakeLists.txt  dnn_test.cpp
src/tracking/tracking_msg/: CMakeLists.txt  package.xml
src/tracking/tracking_msg/msg/: BoundingBox.msg
src/trajectory/: CMakeLists.txt  package.xml
(+247 files in other folders)
